[gd_scene load_steps=2 format=2]

[ext_resource path="res://assets/scripts/menus/level-selection/LevelMenu.gd" type="Script" id=1]

[node name="LevelMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -157.0
margin_top = -45.0
margin_right = 157.0
margin_bottom = 45.0

[node name="MapTitleLabel" type="Label" parent="VBoxContainer"]
margin_right = 314.0
margin_bottom = 14.0
text = "Map Title"

[node name="MapDescriptionLabel" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 314.0
margin_bottom = 66.0
text = "A very long map description for a very confluted and difficult map to play on if you are not a gigachad like I am"
autowrap = true

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 314.0
margin_bottom = 90.0
text = "Play"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
